<resources>
    <string name="app_name">Toguz</string>
    <string name="action_settings">Настройки</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Дальше</string>
    <string name="previous">Назад</string>

    <string name="menu_label">Меню</string>
    <string name="stat">Статистика</string>
    <string name="instruct">Информация</string>
    <string name="pvp">Игрок против Игрока</string>
    <string name="pvc">Игрок против ИИ</string>
    <string name="rules">Исходная позиция
Перед началом игры в каждую игровую лунку раскладывают по 9 камней. Накопительная лунка пуста. Каждому игроку принадлежит ближний к нему ряд из 9-ти лунок и одна накопительная лунка, располагающаяся ближе к игроку или по правую руку.\n
Ходы\n
Ходы делают по очереди. Право первого хода взаимно оговаривается или разыгрывается жребием, начинающий игру садится с белой стороны. Во время своего хода игрок берёт все камни из любой своей лунки «дом» и, начиная с этой же лунки, раскладывает их по одному против часовой стрелки в свои и чужие дома. Если в исходной лунке только один камень, то он перекладывается в следующую лунку.\n
Выигрыш камней\n
Если последний коргоол попадает в дом соперника и количество коргоолов в нём становится чётным, то коргоолы из этого дома переходят в казан игрока, совершившего ход.\n
Туз\n
Туз — выигранная лунка на стороне соперника. Если при ходе игрока А последний коргоол попадает в дом игрока Б и в нём после этого оказывается три коргоола, то этот дом объявляется тузом игрока А. Эти три коргоола попадают в казан игрока А. В последующем каждый коргоол, попавший в туз, переходит в казан игрока А. Существует 3 основных правила взятия туза:\n
  1) игрок не может завести себе туз в самом последнем (девятом) доме соперника,\n
  2) игрок не может завести себе туз в доме с таким же порядковым номером, который имеет лунка-туз соперника,\n
  3) каждый игрок в течение игры может завести себе только один туз.\n
Отказаться от туза или изменить его положение нельзя. Туз действует до конца игры и для удобства помечается специальным знаком.\n
Окончание партии\n
Победа в игре достигается двумя способами:\n
  1) набор в свой казан 82 коргоола или более;\n
  2) у противника не осталось ходов и при этом он ещё не набрал 81 коргоол.</string>
    <string name="dialog_fire_missiles">go well</string>
    <string name="fire">Да</string>
    <string name="cancel">Нет</string>
    <string name="popup_text">.</string>
    <string name="statist">Игр сыграно:\n  С человеком: 1\n  С ботом: 1\n  Всего: 2\n\nСреднее время игры:\n  С человеком: 4:31\n  С ботом: 2:12\n</string>
</resources>